--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.conf.js",
-    "start": "http-server -a 127.0.0.1 -p 7070"
+    "start": "webpack-dev-server --open --config webpack.dev.conf.js"
   },
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "http-server": "^0.11.1",
-    "webpack": "3.9.1"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
