--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "ccc",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.conf.js",
-    "dev": "webpack --config webpack.dev.conf.js",
-    "start": "webpack-dev-server --open --config webpack.dev.conf.js"
+    "test": "karma start --browsers ChromeHeadless karma.conf.js",
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.dev.config.js",
+    "start": "webpack-dev-server --open --config webpack.dev.config.js"
   },
   "dependencies": {
     "whatwg-url": "^6.4.1"
@@ -16,7 +17,18 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "karma": "^2.0.2",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^4.0.0-beta.0",
+    "mocha": "^5.1.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
