--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^4.0.0-beta.0",
     "mocha": "^5.1.1",
+    "sinon": "^5.0.7",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
