--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wsmock-js",
   "version": "1.0.0",
-  "main": "./src/wsmock.js",
+  "main": "./dist/wsmock.min.js",
   "author": "ccc",
   "license": "MIT",
   "scripts": {
     "test": "karma start --browsers ChromeHeadless karma.conf.js",
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack --config webpack.dev.config.js",
-    "start": "webpack-dev-server --open --config webpack.dev.config.js"
+    "start": "webpack-dev-server --open --config webpack.test.config.js",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "whatwg-url": "^6.4.1"
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^2.0.2",
@@ -30,6 +31,7 @@
     "karma-webpack": "^4.0.0-beta.0",
     "mocha": "^5.1.1",
     "sinon": "^5.0.7",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
