--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepublish": "npm run build"
   },
   "repository": {
-    "url": "git@github.com:ChuChencheng/wsmock-js.git",
+    "url": "https://github.com/ChuChencheng/wsmock-js.git",
     "type": "git"
   },
   "keywords": [
